Wrap text so that it does not overflow into adjacent issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,6 +74,10 @@ body {
 	width: 300px;
 }
 
+.issue-summary {
+	word-wrap: break-word;
+}
+
 .issue-update {
 	border-radius: 5px;
 	height: 100%;
